Fix wrap on error page

--- a/css/outer/error/error.less
+++ b/css/outer/error/error.less
@@ -4,6 +4,7 @@
   overflow-x: hidden;
   overflow-y: auto;
 
+  height: 100%;
   #wrap {
     height: 100%;
   }
